--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.4.9",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "react-chartjs-2": "^5.3.0",
     "stripe": "^18.1.0",
     "validator": "^13.15.0"
   }
