--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # MONGODB_URI="mongodb+srv://shishulabbd:ITPmIMw4smS0stQK@cluster0.cc8yjku.mongodb.net"
-# MONGODB_URI="mongodb://localhost:27017"
-MONGODB_URI="mongodb+srv://ecommerce:uQAOVA3HR1wnTilv@cluster0.olk4u.mongodb.net"
+MONGODB_URI="mongodb://localhost:27017"
 
 CLOUDINARY_CLOUD_NAME="dbc7aucky"
 CLOUDINARY_API_KEY="245688145183453"
